change src plugin

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
   <script type="text/javascript" src="asset/js/jquery.min.js"></script>
   <script type="text/javascript" src="asset/js/demo.js"></script>
-  <script type="text/javascript" src="../twitchtv-plugin.js"></script>
+  <script type="text/javascript" src="twitchtv-plugin.js"></script>
   <script>
     $(document).ready(function() {
       $('#channel').twitchtv('nocopyrightsounds');
